--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>karl</groupId>
   <artifactId>marl</artifactId>
   <version>1.0</version>
-  <packaging>test.war</packaging>
+  <packaging>war</packaging>
 
   <name>test</name>
   <!-- FIXME change it to the project's website -->
