--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0</version>
   <packaging>war</packaging>
 
-  <name>test</name>
+  <name>test.war</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
